src/scanparse/y.output
Terminals unused in grammar

   COMMENT_SINGLE
   COMMENT_MULT


State 174 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declaration declarations
    3             | declaration

    4 declaration: fundefdec
    5            | globaldec
    6            | globaldef

    7 fundefdec: EXPORT type ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT type ID BRACKET_L BRACKET_R param BRACE_L funbody BRACE_R
    9          | type ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
   10          | type ID BRACKET_L param BRACKET_R BRACE_L funbody BRACE_R
   11          | EXTERN type ID BRACKET_L BRACKET_R SEMICOLON
   12          | EXTERN type ID BRACKET_L param BRACKET_R SEMICOLON

   13 globaldec: EXTERN type ID SEMICOLON

   14 globaldef: EXPORT type ID LET expr SEMICOLON
   15          | EXPORT type ID SEMICOLON
   16          | type ID LET expr SEMICOLON
   17          | type ID SEMICOLON

   18 param: type var COMMA param
   19      | type var

   20 type: TYPE_INT
   21     | TYPE_FLOAT
   22     | TYPE_BOOL
   23     | TYPE_VOID

   24 funbody: vardecs localfundefs statements
   25        | vardecs localfundefs
   26        | vardecs statements
   27        | localfundefs statements
   28        | vardecs
   29        | localfundefs
   30        | statements

   31 vardecs: vardecs type ID LET expr SEMICOLON
   32        | vardecs type ID SEMICOLON
   33        | type ID LET expr SEMICOLON
   34        | type ID SEMICOLON

   35 localfundefs: fundefdec localfundefs
   36             | fundefdec

   37 statements: stmt statements
   38           | stmt

   39 stmt: ID LET expr SEMICOLON
   40     | funcall SEMICOLON
   41     | WHILE BRACKET_L expr BRACKET_R block
   42     | DO block WHILE BRACKET_L expr BRACKET_R SEMICOLON
   43     | if
   44     | for
   45     | RETURN expr SEMICOLON

   46 for: FOR BRACKET_L TYPE_INT ID LET expr COMMA expr COMMA expr BRACKET_R block
   47    | FOR BRACKET_L TYPE_INT ID LET expr COMMA expr BRACKET_R block

   48 if: IF BRACKET_L expr BRACKET_R block ELSE block
   49   | IF BRACKET_L expr BRACKET_R block

   50 block: BRACE_L statements BRACE_R
   51      | stmt

   52 exprs: expr COMMA exprs
   53      | expr

   54 expr: BRACKET_L expr BRACKET_R
   55     | binop
   56     | monop
   57     | cast
   58     | var
   59     | funcall
   60     | FLOAT
   61     | NUM
   62     | TRUEVAL
   63     | FALSEVAL

   64 cast: BRACKET_L type BRACKET_R expr

   65 funcall: ID BRACKET_L exprs BRACKET_R

   66 monop: MINUS expr
   67      | NOT expr

   68 binop: expr PLUS expr
   69      | expr MINUS expr
   70      | expr STAR expr
   71      | expr SLASH expr
   72      | expr PERCENT expr
   73      | expr LE expr
   74      | expr LT expr
   75      | expr GE expr
   76      | expr GT expr
   77      | expr EQ expr
   78      | expr NE expr
   79      | expr OR expr
   80      | expr AND expr

   81 var: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
TYPE_BOOL (258) 22
TYPE_INT (259) 20 46 47
TYPE_VOID (260) 23
TYPE_FLOAT (261) 21
BRACKET_L (262) 7 8 9 10 11 12 41 42 46 47 48 49 54 64 65
BRACKET_R (263) 7 8 9 10 11 12 41 42 46 47 48 49 54 64 65
BRACE_L (264) 7 8 9 10 50
BRACE_R (265) 7 8 9 10 50
COMMA (266) 18 46 47 52
SEMICOLON (267) 11 12 13 14 15 16 17 31 32 33 34 39 40 42 45
MINUS (268) 66 69
PLUS (269) 68
STAR (270) 70
SLASH (271) 71
PERCENT (272) 72
LE (273) 73
LT (274) 74
GE (275) 75
GT (276) 76
EQ (277) 77
NE (278) 78
AND (279) 80
OR (280) 79
NOT (281) 67
LET (282) 14 16 31 33 39 46 47
DO (283) 42
WHILE (284) 41 42
FOR (285) 46 47
IF (286) 48 49
ELSE (287) 48
RETURN (288) 45
EXTERN (289) 11 12 13
EXPORT (290) 7 8 14 15
TRUEVAL (291) 62
FALSEVAL (292) 63
COMMENT_SINGLE (293)
COMMENT_MULT (294)
NUM (295) 61
FLOAT (296) 60
ID (297) 7 8 9 10 11 12 13 14 15 16 17 31 32 33 34 39 46 47 65 81


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
declarations (45)
    on left: 2 3, on right: 1 2
declaration (46)
    on left: 4 5 6, on right: 2 3
fundefdec (47)
    on left: 7 8 9 10 11 12, on right: 4 35 36
globaldec (48)
    on left: 13, on right: 5
globaldef (49)
    on left: 14 15 16 17, on right: 6
param (50)
    on left: 18 19, on right: 8 10 12 18
type (51)
    on left: 20 21 22 23, on right: 7 8 9 10 11 12 13 14 15 16 17 18
    19 31 32 33 34 64
funbody (52)
    on left: 24 25 26 27 28 29 30, on right: 7 8 9 10
vardecs (53)
    on left: 31 32 33 34, on right: 24 25 26 28 31 32
localfundefs (54)
    on left: 35 36, on right: 24 25 27 29 35
statements (55)
    on left: 37 38, on right: 24 26 27 30 37 50
stmt (56)
    on left: 39 40 41 42 43 44 45, on right: 37 38 51
for (57)
    on left: 46 47, on right: 44
if (58)
    on left: 48 49, on right: 43
block (59)
    on left: 50 51, on right: 41 42 46 47 48 49
exprs (60)
    on left: 52 53, on right: 52 65
expr (61)
    on left: 54 55 56 57 58 59 60 61 62 63, on right: 14 16 31 33 39
    41 42 45 46 47 48 49 52 53 54 64 66 67 68 69 70 71 72 73 74 75
    76 77 78 79 80
cast (62)
    on left: 64, on right: 57
funcall (63)
    on left: 65, on right: 40 59
monop (64)
    on left: 66 67, on right: 56
binop (65)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80, on right: 55
var (66)
    on left: 81, on right: 18 19 58


State 0

    0 $accept: . program $end

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    EXTERN      shift, and go to state 5
    EXPORT      shift, and go to state 6

    program       go to state 7
    declarations  go to state 8
    declaration   go to state 9
    fundefdec     go to state 10
    globaldec     go to state 11
    globaldef     go to state 12
    type          go to state 13


State 1

   22 type: TYPE_BOOL .

    $default  reduce using rule 22 (type)


State 2

   20 type: TYPE_INT .

    $default  reduce using rule 20 (type)


State 3

   23 type: TYPE_VOID .

    $default  reduce using rule 23 (type)


State 4

   21 type: TYPE_FLOAT .

    $default  reduce using rule 21 (type)


State 5

   11 fundefdec: EXTERN . type ID BRACKET_L BRACKET_R SEMICOLON
   12          | EXTERN . type ID BRACKET_L param BRACKET_R SEMICOLON
   13 globaldec: EXTERN . type ID SEMICOLON

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4

    type  go to state 14


State 6

    7 fundefdec: EXPORT . type ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT . type ID BRACKET_L BRACKET_R param BRACE_L funbody BRACE_R
   14 globaldef: EXPORT . type ID LET expr SEMICOLON
   15          | EXPORT . type ID SEMICOLON

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4

    type  go to state 15


State 7

    0 $accept: program . $end

    $end  shift, and go to state 16


State 8

    1 program: declarations .

    $default  reduce using rule 1 (program)


State 9

    2 declarations: declaration . declarations
    3             | declaration .

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    EXTERN      shift, and go to state 5
    EXPORT      shift, and go to state 6

    $default  reduce using rule 3 (declarations)

    declarations  go to state 17
    declaration   go to state 9
    fundefdec     go to state 10
    globaldec     go to state 11
    globaldef     go to state 12
    type          go to state 13


State 10

    4 declaration: fundefdec .

    $default  reduce using rule 4 (declaration)


State 11

    5 declaration: globaldec .

    $default  reduce using rule 5 (declaration)


State 12

    6 declaration: globaldef .

    $default  reduce using rule 6 (declaration)


State 13

    9 fundefdec: type . ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
   10          | type . ID BRACKET_L param BRACKET_R BRACE_L funbody BRACE_R
   16 globaldef: type . ID LET expr SEMICOLON
   17          | type . ID SEMICOLON

    ID  shift, and go to state 18


State 14

   11 fundefdec: EXTERN type . ID BRACKET_L BRACKET_R SEMICOLON
   12          | EXTERN type . ID BRACKET_L param BRACKET_R SEMICOLON
   13 globaldec: EXTERN type . ID SEMICOLON

    ID  shift, and go to state 19


State 15

    7 fundefdec: EXPORT type . ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT type . ID BRACKET_L BRACKET_R param BRACE_L funbody BRACE_R
   14 globaldef: EXPORT type . ID LET expr SEMICOLON
   15          | EXPORT type . ID SEMICOLON

    ID  shift, and go to state 20


State 16

    0 $accept: program $end .

    $default  accept


State 17

    2 declarations: declaration declarations .

    $default  reduce using rule 2 (declarations)


State 18

    9 fundefdec: type ID . BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
   10          | type ID . BRACKET_L param BRACKET_R BRACE_L funbody BRACE_R
   16 globaldef: type ID . LET expr SEMICOLON
   17          | type ID . SEMICOLON

    BRACKET_L  shift, and go to state 21
    SEMICOLON  shift, and go to state 22
    LET        shift, and go to state 23


State 19

   11 fundefdec: EXTERN type ID . BRACKET_L BRACKET_R SEMICOLON
   12          | EXTERN type ID . BRACKET_L param BRACKET_R SEMICOLON
   13 globaldec: EXTERN type ID . SEMICOLON

    BRACKET_L  shift, and go to state 24
    SEMICOLON  shift, and go to state 25


State 20

    7 fundefdec: EXPORT type ID . BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT type ID . BRACKET_L BRACKET_R param BRACE_L funbody BRACE_R
   14 globaldef: EXPORT type ID . LET expr SEMICOLON
   15          | EXPORT type ID . SEMICOLON

    BRACKET_L  shift, and go to state 26
    SEMICOLON  shift, and go to state 27
    LET        shift, and go to state 28


State 21

    9 fundefdec: type ID BRACKET_L . BRACKET_R BRACE_L funbody BRACE_R
   10          | type ID BRACKET_L . param BRACKET_R BRACE_L funbody BRACE_R

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    BRACKET_R   shift, and go to state 29

    param  go to state 30
    type   go to state 31


State 22

   17 globaldef: type ID SEMICOLON .

    $default  reduce using rule 17 (globaldef)


State 23

   16 globaldef: type ID LET . expr SEMICOLON

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 40
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 24

   11 fundefdec: EXTERN type ID BRACKET_L . BRACKET_R SEMICOLON
   12          | EXTERN type ID BRACKET_L . param BRACKET_R SEMICOLON

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    BRACKET_R   shift, and go to state 46

    param  go to state 47
    type   go to state 31


State 25

   13 globaldec: EXTERN type ID SEMICOLON .

    $default  reduce using rule 13 (globaldec)


State 26

    7 fundefdec: EXPORT type ID BRACKET_L . BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT type ID BRACKET_L . BRACKET_R param BRACE_L funbody BRACE_R

    BRACKET_R  shift, and go to state 48


State 27

   15 globaldef: EXPORT type ID SEMICOLON .

    $default  reduce using rule 15 (globaldef)


State 28

   14 globaldef: EXPORT type ID LET . expr SEMICOLON

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 49
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 29

    9 fundefdec: type ID BRACKET_L BRACKET_R . BRACE_L funbody BRACE_R

    BRACE_L  shift, and go to state 50


State 30

   10 fundefdec: type ID BRACKET_L param . BRACKET_R BRACE_L funbody BRACE_R

    BRACKET_R  shift, and go to state 51


State 31

   18 param: type . var COMMA param
   19      | type . var

    ID  shift, and go to state 52

    var  go to state 53


State 32

   54 expr: BRACKET_L . expr BRACKET_R
   64 cast: BRACKET_L . type BRACKET_R expr

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    BRACKET_L   shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    TRUEVAL     shift, and go to state 35
    FALSEVAL    shift, and go to state 36
    NUM         shift, and go to state 37
    FLOAT       shift, and go to state 38
    ID          shift, and go to state 39

    type     go to state 54
    expr     go to state 55
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 33

   66 monop: MINUS . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 56
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 34

   67 monop: NOT . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 57
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 35

   62 expr: TRUEVAL .

    $default  reduce using rule 62 (expr)


State 36

   63 expr: FALSEVAL .

    $default  reduce using rule 63 (expr)


State 37

   61 expr: NUM .

    $default  reduce using rule 61 (expr)


State 38

   60 expr: FLOAT .

    $default  reduce using rule 60 (expr)


State 39

   65 funcall: ID . BRACKET_L exprs BRACKET_R
   81 var: ID .

    BRACKET_L  shift, and go to state 58

    $default  reduce using rule 81 (var)


State 40

   16 globaldef: type ID LET expr . SEMICOLON
   68 binop: expr . PLUS expr
   69      | expr . MINUS expr
   70      | expr . STAR expr
   71      | expr . SLASH expr
   72      | expr . PERCENT expr
   73      | expr . LE expr
   74      | expr . LT expr
   75      | expr . GE expr
   76      | expr . GT expr
   77      | expr . EQ expr
   78      | expr . NE expr
   79      | expr . OR expr
   80      | expr . AND expr

    SEMICOLON  shift, and go to state 59
    MINUS      shift, and go to state 60
    PLUS       shift, and go to state 61
    STAR       shift, and go to state 62
    SLASH      shift, and go to state 63
    PERCENT    shift, and go to state 64
    LE         shift, and go to state 65
    LT         shift, and go to state 66
    GE         shift, and go to state 67
    GT         shift, and go to state 68
    EQ         shift, and go to state 69
    NE         shift, and go to state 70
    AND        shift, and go to state 71
    OR         shift, and go to state 72


State 41

   57 expr: cast .

    $default  reduce using rule 57 (expr)


State 42

   59 expr: funcall .

    $default  reduce using rule 59 (expr)


State 43

   56 expr: monop .

    $default  reduce using rule 56 (expr)


State 44

   55 expr: binop .

    $default  reduce using rule 55 (expr)


State 45

   58 expr: var .

    $default  reduce using rule 58 (expr)


State 46

   11 fundefdec: EXTERN type ID BRACKET_L BRACKET_R . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 47

   12 fundefdec: EXTERN type ID BRACKET_L param . BRACKET_R SEMICOLON

    BRACKET_R  shift, and go to state 74


State 48

    7 fundefdec: EXPORT type ID BRACKET_L BRACKET_R . BRACE_L funbody BRACE_R
    8          | EXPORT type ID BRACKET_L BRACKET_R . param BRACE_L funbody BRACE_R

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    BRACE_L     shift, and go to state 75

    param  go to state 76
    type   go to state 31


State 49

   14 globaldef: EXPORT type ID LET expr . SEMICOLON
   68 binop: expr . PLUS expr
   69      | expr . MINUS expr
   70      | expr . STAR expr
   71      | expr . SLASH expr
   72      | expr . PERCENT expr
   73      | expr . LE expr
   74      | expr . LT expr
   75      | expr . GE expr
   76      | expr . GT expr
   77      | expr . EQ expr
   78      | expr . NE expr
   79      | expr . OR expr
   80      | expr . AND expr

    SEMICOLON  shift, and go to state 77
    MINUS      shift, and go to state 60
    PLUS       shift, and go to state 61
    STAR       shift, and go to state 62
    SLASH      shift, and go to state 63
    PERCENT    shift, and go to state 64
    LE         shift, and go to state 65
    LT         shift, and go to state 66
    GE         shift, and go to state 67
    GT         shift, and go to state 68
    EQ         shift, and go to state 69
    NE         shift, and go to state 70
    AND        shift, and go to state 71
    OR         shift, and go to state 72


State 50

    9 fundefdec: type ID BRACKET_L BRACKET_R BRACE_L . funbody BRACE_R

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    DO          shift, and go to state 78
    WHILE       shift, and go to state 79
    FOR         shift, and go to state 80
    IF          shift, and go to state 81
    RETURN      shift, and go to state 82
    EXTERN      shift, and go to state 83
    EXPORT      shift, and go to state 84
    ID          shift, and go to state 85

    fundefdec     go to state 86
    type          go to state 87
    funbody       go to state 88
    vardecs       go to state 89
    localfundefs  go to state 90
    statements    go to state 91
    stmt          go to state 92
    for           go to state 93
    if            go to state 94
    funcall       go to state 95


State 51

   10 fundefdec: type ID BRACKET_L param BRACKET_R . BRACE_L funbody BRACE_R

    BRACE_L  shift, and go to state 96


State 52

   81 var: ID .

    $default  reduce using rule 81 (var)


State 53

   18 param: type var . COMMA param
   19      | type var .

    COMMA  shift, and go to state 97

    $default  reduce using rule 19 (param)


State 54

   64 cast: BRACKET_L type . BRACKET_R expr

    BRACKET_R  shift, and go to state 98


State 55

   54 expr: BRACKET_L expr . BRACKET_R
   68 binop: expr . PLUS expr
   69      | expr . MINUS expr
   70      | expr . STAR expr
   71      | expr . SLASH expr
   72      | expr . PERCENT expr
   73      | expr . LE expr
   74      | expr . LT expr
   75      | expr . GE expr
   76      | expr . GT expr
   77      | expr . EQ expr
   78      | expr . NE expr
   79      | expr . OR expr
   80      | expr . AND expr

    BRACKET_R  shift, and go to state 99
    MINUS      shift, and go to state 60
    PLUS       shift, and go to state 61
    STAR       shift, and go to state 62
    SLASH      shift, and go to state 63
    PERCENT    shift, and go to state 64
    LE         shift, and go to state 65
    LT         shift, and go to state 66
    GE         shift, and go to state 67
    GT         shift, and go to state 68
    EQ         shift, and go to state 69
    NE         shift, and go to state 70
    AND        shift, and go to state 71
    OR         shift, and go to state 72


State 56

   66 monop: MINUS expr .
   68 binop: expr . PLUS expr
   69      | expr . MINUS expr
   70      | expr . STAR expr
   71      | expr . SLASH expr
   72      | expr . PERCENT expr
   73      | expr . LE expr
   74      | expr . LT expr
   75      | expr . GE expr
   76      | expr . GT expr
   77      | expr . EQ expr
   78      | expr . NE expr
   79      | expr . OR expr
   80      | expr . AND expr

    $default  reduce using rule 66 (monop)


State 57

   67 monop: NOT expr .
   68 binop: expr . PLUS expr
   69      | expr . MINUS expr
   70      | expr . STAR expr
   71      | expr . SLASH expr
   72      | expr . PERCENT expr
   73      | expr . LE expr
   74      | expr . LT expr
   75      | expr . GE expr
   76      | expr . GT expr
   77      | expr . EQ expr
   78      | expr . NE expr
   79      | expr . OR expr
   80      | expr . AND expr

    $default  reduce using rule 67 (monop)


State 58

   65 funcall: ID BRACKET_L . exprs BRACKET_R

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    exprs    go to state 100
    expr     go to state 101
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 59

   16 globaldef: type ID LET expr SEMICOLON .

    $default  reduce using rule 16 (globaldef)


State 60

   69 binop: expr MINUS . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 102
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 61

   68 binop: expr PLUS . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 103
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 62

   70 binop: expr STAR . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 104
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 63

   71 binop: expr SLASH . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 105
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 64

   72 binop: expr PERCENT . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 106
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 65

   73 binop: expr LE . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 107
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 66

   74 binop: expr LT . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 108
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 67

   75 binop: expr GE . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 109
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 68

   76 binop: expr GT . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 110
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 69

   77 binop: expr EQ . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 111
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 70

   78 binop: expr NE . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 112
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 71

   80 binop: expr AND . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 113
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 72

   79 binop: expr OR . expr

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 114
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 73

   11 fundefdec: EXTERN type ID BRACKET_L BRACKET_R SEMICOLON .

    $default  reduce using rule 11 (fundefdec)


State 74

   12 fundefdec: EXTERN type ID BRACKET_L param BRACKET_R . SEMICOLON

    SEMICOLON  shift, and go to state 115


State 75

    7 fundefdec: EXPORT type ID BRACKET_L BRACKET_R BRACE_L . funbody BRACE_R

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    DO          shift, and go to state 78
    WHILE       shift, and go to state 79
    FOR         shift, and go to state 80
    IF          shift, and go to state 81
    RETURN      shift, and go to state 82
    EXTERN      shift, and go to state 83
    EXPORT      shift, and go to state 84
    ID          shift, and go to state 85

    fundefdec     go to state 86
    type          go to state 87
    funbody       go to state 116
    vardecs       go to state 89
    localfundefs  go to state 90
    statements    go to state 91
    stmt          go to state 92
    for           go to state 93
    if            go to state 94
    funcall       go to state 95


State 76

    8 fundefdec: EXPORT type ID BRACKET_L BRACKET_R param . BRACE_L funbody BRACE_R

    BRACE_L  shift, and go to state 117


State 77

   14 globaldef: EXPORT type ID LET expr SEMICOLON .

    $default  reduce using rule 14 (globaldef)


State 78

   42 stmt: DO . block WHILE BRACKET_L expr BRACKET_R SEMICOLON

    BRACE_L  shift, and go to state 118
    DO       shift, and go to state 78
    WHILE    shift, and go to state 79
    FOR      shift, and go to state 80
    IF       shift, and go to state 81
    RETURN   shift, and go to state 82
    ID       shift, and go to state 85

    stmt     go to state 119
    for      go to state 93
    if       go to state 94
    block    go to state 120
    funcall  go to state 95


State 79

   41 stmt: WHILE . BRACKET_L expr BRACKET_R block

    BRACKET_L  shift, and go to state 121


State 80

   46 for: FOR . BRACKET_L TYPE_INT ID LET expr COMMA expr COMMA expr BRACKET_R block
   47    | FOR . BRACKET_L TYPE_INT ID LET expr COMMA expr BRACKET_R block

    BRACKET_L  shift, and go to state 122


State 81

   48 if: IF . BRACKET_L expr BRACKET_R block ELSE block
   49   | IF . BRACKET_L expr BRACKET_R block

    BRACKET_L  shift, and go to state 123


State 82

   45 stmt: RETURN . expr SEMICOLON

    BRACKET_L  shift, and go to state 32
    MINUS      shift, and go to state 33
    NOT        shift, and go to state 34
    TRUEVAL    shift, and go to state 35
    FALSEVAL   shift, and go to state 36
    NUM        shift, and go to state 37
    FLOAT      shift, and go to state 38
    ID         shift, and go to state 39

    expr     go to state 124
    cast     go to state 41
    funcall  go to state 42
    monop    go to state 43
    binop    go to state 44
    var      go to state 45


State 83

   11 fundefdec: EXTERN . type ID BRACKET_L BRACKET_R SEMICOLON
   12          | EXTERN . type ID BRACKET_L param BRACKET_R SEMICOLON

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4

    type  go to state 125


State 84

    7 fundefdec: EXPORT . type ID BRACKET_L BRACKET_R BRACE_L funbody BRACE_R
    8          | EXPORT . type ID BRACKET_L BRACKET_R param BRACE_L funbody BRACE_R

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4

    type  go to state 126


State 85

   39 stmt: ID . LET expr SEMICOLON
   65 funcall: ID . BRACKET_L exprs BRACKET_R

    BRACKET_L  shift, and go to state 58
    LET        shift, and go to state 127


State 86

   35 localfundefs: fundefdec . localfundefs
   36             | fundefdec .

    TYPE_BOOL   shift, and go to state 1
    TYPE_INT    shift, and go to state 2
    TYPE_VOID   shift, and go to state 3
    TYPE_FLOAT  shift, and go to state 4
    EXTERN      shift, and go to state 83
    EXPORT      shift, and go to state 84

    $default  reduce using rule 36 (localfundefs)
